# brickforge

./: .databricksignore  .env.example  .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  app.yaml  build-release.sh  changes.md  databricks.yml  mkdocs.yml  pyproject.toml  setup-app-initial.md  setup-app.yaml  setup.py  start.sh
.claude/skills/dbx-get-context/: SKILL.md
.claude/skills/dbx-ka/: SKILL.md
.claude/skills/forge-add-block/: SKILL.md
.claude/skills/forge-add-ka/: SKILL.md
.claude/skills/forge-pack-modules/: SKILL.md
.claude/skills/forge-ui/: SKILL.md
agent/: agent.py  memory_tools.py  start_server.py
app/: package-lock.json
app/client/: package.json  vite.config.ts
app/server/src/: index.ts
brickforge/: __init__.py  cli.py  requirements.txt  server.py
brickforge/agent/: agent.py  evaluate_agent.py  genie_capture.py  start_server.py
brickforge/app/: app.yaml  package-lock.json
brickforge/app/client/: index.html  vite.config.ts
brickforge/app/server/: tsdown.config.ts
brickforge/conf/: .env.example
brickforge/conf/prompt/: knowledge.base  main.prompt  user.prompt
brickforge/data/init/: create_all_assets.py  create_all_functions.py  create_all_procedures.py  create_catalog_schema.py  create_genie_space.py  create_lakebase.py  create_mlflow_experiment.py
brickforge/data/py/: csv_to_delta.py  run_sql.py  sql_utils.py
brickforge/deploy/: deploy.sh  deploy_agent_app.py  deploy_setup_app.py  git_push.py  sync_databricks_yml_from_env.py
brickforge/deploy/grant/: authorize_endpoint_for_app.py  authorize_genie_for_app.py  authorize_warehouse_for_app.py  grant_app_functions.py  grant_app_tables.py  grant_lakebase_for_app.py  retrieve_app_sp.py  run_all_grants.py  run_all_grants.sh
brickforge/eval/: predict.py  run_eval.py  scorer.py
brickforge/generators/: llm_client.py
brickforge/generators/prompts/: generate_prompts.py  prompt_generator.py
brickforge/generators/routines/: generate_routines.py  routine_schema_generator.py  routine_sql_generator.py
brickforge/generators/tables/: data_generator.py  generate_tables.py  schema_generator.py
brickforge/lib/: bridge_oauth.py  config_json.py  config_provider.py  env_utils.py  export_config_env.py  github_client.py  graph_builder.py  project_paths.py  sse.py  token_store.py
brickforge/mlruns/0/: meta.yaml
brickforge/provisioners/: create_all_assets.py  create_all_functions.py  create_all_procedures.py  create_catalog_schema.py  create_genie_space.py  create_lakebase.py  create_mlflow_experiment.py  csv_to_delta.py  run_sql.py
brickforge/routes/: auth.py  cleanup.py  gen.py  ka.py  projects.py  setup.py
brickforge/scripts/: connect-cli.sh  connect.sh
brickforge/scripts/py/: env_store.py  init_env_store.py  init_prereqs.py  quickstart.py  reset_workspace.py  setup_dbx_env.py  test_agent_model.py
brickforge/scripts/release/: build.sh  bump.sh  upload.sh
brickforge/scripts/sh/: env_store.sh  init_env_store.sh  init_prereqs.sh  reset_workspace.sh  setup_dbx_env.sh  start_local.sh
brickforge/stash/airops/: airops.forge  app.yaml  tools.json
brickforge/static/: connect.sh  index.html
brickforge/static/assets/: index-1Us4Bwof.js  index-6evHXzd5.js  index-B9WvQcqG.js  index-BDZ3K_8q.css  index-BQspRTnc.css  index-BR4PsA-U.css  index-BR5vxsf0.js  (+38 more)
brickforge/tools/: a2a_factory.py  api_factory.py  generate_chart.py  get_current_time.py  tool_factory.py
conf/ka/: output_format.yml
conf/prompt/: main.prompt
data/init/: create_all_assets.py  create_all_functions.py  create_all_procedures.py  create_genie_space.py  create_lakebase.py
data/py/: csv_to_delta.py  run_sql.py
dbc/: build_bundle.py  build_bundle_sdk.py
deploy/: deploy.sh  deploy_agent_app.py  sync_databricks_yml_from_env.py
deploy/grant/: authorize_genie_for_app.py  grant_lakebase_for_app.py
doc/guide/: brickforge-guide.md
doc/internal/: fix-agent-model-token.md
doc/plan/: brickforge-software.html  cross-workspace-auth.md  deploy-logbook.md  network-access.md  next-steps-20260526.md  python-backend-rewrite.md  saas-master-plan.md  saas-plan.md  saas-transition-details.md
doc/reference/: a2a-integration.md  agent-forge_overview.pptx  api-integration.md  genie-permissions-api.md  voice-tool-plan.md
docs/: Build & setup flow.md  agent-forge_guide.md  brickforge-guide.md  context-for-claude-code.md
docs/git/: history.md
docs/guide/: brickforge-guide.md
docs/plan/: agent-app-manifest.md  architecture-tab-fix.md  brickforge-software.html  bridge-auth.md  build-assets-plan-raw.md  build-assets.md  config-json-migration.md  deploy-inline-appname.md  deploy-log-persistence.md  deploy-logbook.md  ec2-devbox.md  forge-package-self-contained.md  git-push-agent-app.md  github-integration.md  implementation-logbook.md  import-load-new.md  inline-bridge-auth.md  new-features.md  next-steps-20260526.md  project-scoped-artifacts.md  python-backend-rewrite.md  robust-sql-generation.md  saas-plan.md  saved-workspaces.md  setup-panel-gaps.md  standalone-agent-repo.md  test-todo.md  uc-functions-fix.md
docs/reference/: agent-forge_overview.md  agentic-memory.md  chart-tool.md  known-issues.md  mcp-integration.md
edu/: index.html
eval/: scorer.py
rtd/: agent-tools.md  architecture.md  config.md  data-generation.md  deploy.md  evaluation.md  getting-started.md  github-integration.md  index.md  projects.md  prompt-system.md  setup-blocks.md
rtd/assets/: extra.css
rtd/reference/: config-reference.md  known-issues.md  tools-table.md
scripts/: connect.sh
scripts/py/: reset_workspace.py  setup_dbx_env.py
scripts/release/: release.sh
stash/airops/: airops.forge  databricks.yml
tests/: play-map-runner.js  test_config_migration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py
tests/play-maps/: project-management.yaml
tools/: ka_factory.py
visual/backend/: index.js  pack-modules.sh  package-lock.json  package.json
visual/frontend/: .gitignore  index.html  setup.html  tailwind.config.js  tsconfig.tsbuildinfo
(+107 files in other folders)
