[project]
name = "brickforge"
version = "0.1.0a5"
description = "Build and deploy Databricks AI agents from a visual Setup App"
requires-python = ">=3.9"
dependencies = [
    "databricks-sdk>=0.102.0",
    "databricks-langchain",
    "mlflow>=2.0",
    "python-dotenv",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "openai",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "pydantic>=2.0",
    "pydantic-settings",
    "requests",
    "httpx",
    "pandas",
    "pyarrow",
    "tenacity",
    "rich",
    "tabulate",
    "flask",
    "flask-cors",
    "pypdf",
    "databricks-vectorsearch",
]

[project.scripts]
brickforge = "brickforge.cli:main"
start-app = "brickforge.agent.start_server:main"

[tool.setuptools.packages.find]
include = ["brickforge*"]

[tool.setuptools.package-data]
brickforge = [
    "static/**/*",
    "data/**/*.sql",
    "data/**/*.csv",
    "data/**/*.json",
    "conf/**/*.prompt",
    "conf/**/*.base",
    "conf/**/*.yml",
    "conf/**/*.yaml",
    "stash/**/*",
    "scripts/**/*.sh",
    "scripts/**/*.py",
    "eval/**/*.jsonl",
    "eval/**/*.py",
    "deploy/**/*.sh",
]

[tool.uv]
native-tls = true

[dependency-groups]
dev = [
    "build>=1.5.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
