[project]
name = "brickforge"
version = "0.1.0a35"
description = "Build and deploy Databricks AI agents from a visual Setup App"
requires-python = ">=3.9"
dependencies = [
    "databricks-sdk==0.94.0",
    "databricks-langchain[memory]==0.19.0",
    "mlflow==3.12.0",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "fastapi==0.136.1",
    "uvicorn==0.47.0",
    "python-multipart==0.0.29",
    "openai==2.37.0",
    "langchain-community==0.4.1",
    "langchain-openai==1.2.1",
    "langgraph==1.2.0",
    "pydantic==2.12.5",
    "coolname==5.0.0",
    "keyring==25.7.0",
    "pydantic-settings==2.14.1",
    "requests==2.34.2",
    "httpx==0.28.1",
    "pandas==2.3.3",
    "pyarrow==23.0.1",
    "tenacity==9.1.4",
    "rich==15.0.0",
    "tabulate==0.10.0",
    "Flask==3.1.3",
    "flask-cors==6.0.2",
    "pypdf==6.11.0",
    "databricks-vectorsearch==0.68",
]

[project.scripts]
brickforge = "brickforge.cli:main"
start-app = "brickforge.agent.start_server:main"

[tool.setuptools.packages.find]
include = ["brickforge*"]
exclude = ["brickforge.app.node_modules*", "brickforge.app.client.node_modules*", "brickforge.app.server.node_modules*", "brickforge.app.tests*"]

[tool.setuptools.exclude-package-data]
brickforge = [
    "app/node_modules/**/*",
    "app/client/node_modules/**/*",
    "app/server/node_modules/**/*",
    "app/tests/**/*",
]

[tool.setuptools.package-data]
brickforge = [
    "static/**/*",
    "data/**/*.sql",
    "data/**/*.csv",
    "data/**/*.json",
    "conf/**/*.prompt",
    "conf/**/*.base",
    "conf/**/*.yml",
    "conf/**/*.yaml",
    "stash/**/*",
    "scripts/**/*.sh",
    "scripts/**/*.py",
    "eval/**/*.jsonl",
    "eval/**/*.py",
    "deploy/**/*.sh",
    "app/*.json",
    "app/*.yaml",
    "app/*.yml",
    "app/*.ts",
    "app/client/src/**/*.ts",
    "app/client/src/**/*.tsx",
    "app/client/src/**/*.css",
    "app/client/*.html",
    "app/client/*.json",
    "app/client/*.ts",
    "app/client/*.js",
    "app/server/src/**/*.ts",
    "app/server/*.json",
    "app/server/*.ts",
    "app/packages/*/src/**/*.ts",
    "app/packages/*/package.json",
    "app/packages/*/tsconfig.json",
    "app/packages/*/tsdown.config.ts",
    "app/packages/db/migrations/**/*.sql",
    "app/packages/db/migrations/**/*.json",
    "app/scripts/**/*.sh",
    "app/scripts/**/*.ts",
    "app/app.yaml",
    "app/databricks.yml",
    "app/client/dist/**/*",
    "app/server/dist/**/*.mjs",
    "pyproject.toml",
    "requirements.txt",
]

[tool.uv]
native-tls = true

[dependency-groups]
dev = [
    "build>=1.5.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
